@@ -1,3 +1,7 @@
+// SPDX-FileCopyrightText: 2024 The members of the EXAM Consortium
+//
+// SPDX-License-Identifier: EUPL-1.2
+
 package controllers;
 
 import static org.fest.assertions.Assertions.assertThat;
@@ -16,24 +20,23 @@ import io.ebean.DB;
 import jakarta.mail.internet.MimeMessage;
 import java.util.ArrayList;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
-import models.AutoEvaluationConfig;
-import models.Exam;
-import models.ExamEnrolment;
-import models.ExamExecutionType;
-import models.ExamMachine;
-import models.ExamParticipation;
-import models.ExamRoom;
-import models.GradeEvaluation;
-import models.Reservation;
-import models.User;
+import models.assessment.AutoEvaluationConfig;
+import models.assessment.GradeEvaluation;
+import models.enrolment.ExamEnrolment;
+import models.enrolment.ExamParticipation;
+import models.enrolment.Reservation;
+import models.exam.Exam;
+import models.exam.ExamExecutionType;
+import models.facility.ExamMachine;
+import models.facility.ExamRoom;
 import models.questions.ClozeTestAnswer;
 import models.questions.EssayAnswer;
 import models.questions.MultipleChoiceOption.ClaimChoiceOptionType;
 import models.questions.Question;
 import models.sections.ExamSectionQuestion;
 import models.sections.ExamSectionQuestionOption;
+import models.user.User;
 import org.joda.time.DateTime;
 import org.junit.Before;
 import org.junit.Rule;
@@ -52,21 +55,26 @@ public class ExaminationControllerTest extends IntegrationTestCase {
     private final Reservation reservation = new Reservation();
 
     @Rule
-    public final GreenMailRule greenMail = new GreenMailRule(ServerSetupTest.SMTP)
-        .withConfiguration(new GreenMailConfiguration().withDisabledAuthentication());
+    public final GreenMailRule greenMail = new GreenMailRule(ServerSetupTest.SMTP).withConfiguration(
+        new GreenMailConfiguration().withDisabledAuthentication()
+    );
 
     @Override
     @Before
     public void setUp() throws Exception {
         super.setUp();
         DB.deleteAll(DB.find(ExamEnrolment.class).findList());
-        exam =
-            DB.find(Exam.class).fetch("examSections").fetch("examSections.sectionQuestions").where().idEq(1L).findOne();
+        exam = DB.find(Exam.class)
+            .fetch("examSections")
+            .fetch("examSections.sectionQuestions")
+            .where()
+            .idEq(1L)
+            .findOne();
         initExamSectionQuestions(exam);
 
         user = DB.find(User.class, userId);
         ExamRoom room = DB.find(ExamRoom.class, 1L);
-        machine = room.getExamMachines().get(0);
+        machine = room.getExamMachines().getFirst();
         machine.setIpAddress("127.0.0.1"); // so that the IP check won't fail
         machine.update();
         reservation.setMachine(machine);
@@ -111,13 +119,17 @@ public class ExaminationControllerTest extends IntegrationTestCase {
 
     @Test
     @RunAsStudent
-    public void testCreateStudentExam() throws Exception {
+    public void testCreateStudentExam() {
         // Execute
         Exam studentExam = prepareExamination();
         assertThat(studentExam.getName()).isEqualTo(exam.getName());
         assertThat(studentExam.getCourse().getId()).isEqualTo(exam.getCourse().getId());
         assertThat(studentExam.getInstruction()).isEqualTo(exam.getInstruction());
-        int esSize = (int) exam.getExamSections().stream().filter(es -> !es.isOptional()).count();
+        int esSize = (int) exam
+            .getExamSections()
+            .stream()
+            .filter(es -> !es.isOptional())
+            .count();
         assertThat(studentExam.getExamSections()).hasSize(esSize);
         assertThat(studentExam.getHash()).isNotEqualTo(exam.getHash());
         assertThat(studentExam.getExamLanguages()).hasSize(exam.getExamLanguages().size());
@@ -125,11 +137,11 @@ public class ExaminationControllerTest extends IntegrationTestCase {
         assertThat(studentExam.getDuration()).isEqualTo(exam.getDuration());
 
         assertThat(DB.find(Exam.class).where().eq("hash", studentExam.getHash()).findOne()).isNotNull();
-        assertThat(DB.find(ExamEnrolment.class, enrolment.getId()).getExam().getHash())
-            .isEqualTo(studentExam.getHash());
+        assertThat(DB.find(ExamEnrolment.class, enrolment.getId()).getExam().getHash()).isEqualTo(
+            studentExam.getHash()
+        );
 
-        ExamParticipation participation = DB
-            .find(ExamParticipation.class)
+        ExamParticipation participation = DB.find(ExamParticipation.class)
             .where()
             .eq("exam.id", studentExam.getId())
             .findOne();
@@ -139,32 +151,28 @@ public class ExaminationControllerTest extends IntegrationTestCase {
 
     @Test
     @RunAsStudent
-    public void testAnswerMultiChoiceQuestion() throws Exception {
+    public void testAnswerMultiChoiceQuestion() {
         Exam studentExam = prepareExamination();
-        ExamSectionQuestion question = DB
-            .find(ExamSectionQuestion.class)
+        ExamSectionQuestion question = DB.find(ExamSectionQuestion.class)
             .where()
             .eq("examSection.exam", studentExam)
             .eq("question.type", Question.Type.MultipleChoiceQuestion)
             .findList()
-            .get(0);
-        Iterator<ExamSectionQuestionOption> it = question.getOptions().iterator();
-        ExamSectionQuestionOption option = it.next();
+            .getFirst();
+        List<ExamSectionQuestionOption> options = question.getOptions();
         Result result = request(
             Helpers.POST,
             String.format("/app/student/exam/%s/question/%d/option", studentExam.getHash(), question.getId()),
-            createMultipleChoiceAnswerData(option)
+            createMultipleChoiceAnswerData(options.getFirst())
         );
         assertThat(result.status()).isEqualTo(Helpers.OK);
 
         // Change answer
-        option = it.next();
-        result =
-            request(
-                Helpers.POST,
-                String.format("/app/student/exam/%s/question/%d/option", studentExam.getHash(), question.getId()),
-                createMultipleChoiceAnswerData(option)
-            );
+        result = request(
+            Helpers.POST,
+            String.format("/app/student/exam/%s/question/%d/option", studentExam.getHash(), question.getId()),
+            createMultipleChoiceAnswerData(options.getLast())
+        );
         assertThat(result.status()).isEqualTo(Helpers.OK);
     }
 
@@ -178,18 +186,16 @@ public class ExaminationControllerTest extends IntegrationTestCase {
 
     @Test
     @RunAsStudent
-    public void testAnswerMultiChoiceQuestionWrongIP() throws Exception {
+    public void testAnswerMultiChoiceQuestionWrongIP() {
         // Setup
         Exam studentExam = prepareExamination();
-        ExamSectionQuestion question = DB
-            .find(ExamSectionQuestion.class)
+        ExamSectionQuestion question = DB.find(ExamSectionQuestion.class)
             .where()
             .eq("examSection.exam", studentExam)
             .eq("question.type", Question.Type.MultipleChoiceQuestion)
             .findList()
-            .get(0);
-        Iterator<ExamSectionQuestionOption> it = question.getOptions().iterator();
-        ExamSectionQuestionOption option = it.next();
+            .getFirst();
+        List<ExamSectionQuestionOption> options = question.getOptions();
         // Change IP of reservation machine to simulate that student is on different machine now
         machine.setIpAddress("127.0.0.2");
         machine.update();
@@ -198,22 +204,21 @@ public class ExaminationControllerTest extends IntegrationTestCase {
         Result result = request(
             Helpers.POST,
             String.format("/app/student/exam/%s/question/%d/option", studentExam.getHash(), question.getId()),
-            createMultipleChoiceAnswerData(option)
+            createMultipleChoiceAnswerData(options.getFirst())
         );
         assertThat(result.status()).isEqualTo(Helpers.FORBIDDEN);
     }
 
     @Test
     @RunAsStudent
-    public void testAnswerClozeTestQuestionInvalidJson() throws Exception {
+    public void testAnswerClozeTestQuestionInvalidJson() {
         Exam studentExam = prepareExamination();
-        ExamSectionQuestion question = DB
-            .find(ExamSectionQuestion.class)
+        ExamSectionQuestion question = DB.find(ExamSectionQuestion.class)
             .where()
             .eq("examSection.exam", studentExam)
             .eq("question.type", Question.Type.ClozeTestQuestion)
             .findList()
-            .get(0);
+            .getFirst();
         String answer = "{\"foo\": \"bar";
         Result result = request(
             Helpers.POST,
@@ -225,7 +230,7 @@ public class ExaminationControllerTest extends IntegrationTestCase {
 
     @Test
     @RunAsStudent
-    public void testDoExamAndAutoEvaluate() throws Exception {
+    public void testDoExamAndAutoEvaluate() {
         setAutoEvaluationConfig();
         Exam studentExam = prepareExamination();
         studentExam
@@ -242,56 +247,48 @@ public class ExaminationControllerTest extends IntegrationTestCase {
                         if (answer != null && answer.getObjectVersion() > 0) {
                             body.put("objectVersion", answer.getObjectVersion());
                         }
-                        r =
-                            request(
-                                Helpers.POST,
-                                String.format("/app/student/exam/%s/question/%d", studentExam.getHash(), esq.getId()),
-                                body
-                            );
+                        r = request(
+                            Helpers.POST,
+                            String.format("/app/student/exam/%s/question/%d", studentExam.getHash(), esq.getId()),
+                            body
+                        );
                         assertThat(r.status()).isEqualTo(Helpers.OK);
                         break;
                     case ClozeTestQuestion:
-                        ObjectNode content = (ObjectNode) Json
-                            .newObject()
-                            .set(
-                                "answer",
-                                Json
-                                    .newObject()
-                                    .put("1", "this is my answer for cloze 1")
-                                    .put("2", "this is my answer for cloze 2")
-                            );
+                        ObjectNode content = Json.newObject().set(
+                            "answer",
+                            Json.newObject()
+                                .put("1", "this is my answer for cloze 1")
+                                .put("2", "this is my answer for cloze 2")
+                        );
                         ClozeTestAnswer clozeAnswer = esq.getClozeTestAnswer();
                         if (clozeAnswer != null && clozeAnswer.getObjectVersion() > 0) {
                             content.put("objectVersion", clozeAnswer.getObjectVersion());
                         }
-                        r =
-                            request(
-                                Helpers.POST,
-                                String.format("/app/student/exam/%s/clozetest/%d", studentExam.getHash(), esq.getId()),
-                                content
-                            );
+                        r = request(
+                            Helpers.POST,
+                            String.format("/app/student/exam/%s/clozetest/%d", studentExam.getHash(), esq.getId()),
+                            content
+                        );
                         assertThat(r.status()).isEqualTo(Helpers.OK);
                         break;
                     default:
-                        ExamSectionQuestion sectionQuestion = DB
-                            .find(ExamSectionQuestion.class)
+                        ExamSectionQuestion sectionQuestion = DB.find(ExamSectionQuestion.class)
                             .where()
                             .eq("examSection.exam", studentExam)
                             .eq("question.type", Question.Type.MultipleChoiceQuestion)
                             .findList()
-                            .get(0);
-                        Iterator<ExamSectionQuestionOption> it = sectionQuestion.getOptions().iterator();
-                        ExamSectionQuestionOption option = it.next();
-                        r =
-                            request(
-                                Helpers.POST,
-                                String.format(
-                                    "/app/student/exam/%s/question/%d/option",
-                                    studentExam.getHash(),
-                                    esq.getId()
-                                ),
-                                createMultipleChoiceAnswerData(option)
-                            );
+                            .getFirst();
+                        List<ExamSectionQuestionOption> options = sectionQuestion.getOptions();
+                        r = request(
+                            Helpers.POST,
+                            String.format(
+                                "/app/student/exam/%s/question/%d/option",
+                                studentExam.getHash(),
+                                esq.getId()
+                            ),
+                            createMultipleChoiceAnswerData(options.getFirst())
+                        );
                         assertThat(r.status()).isEqualTo(Helpers.OK);
                         break;
                 }
@@ -353,7 +350,7 @@ public class ExaminationControllerTest extends IntegrationTestCase {
 
     @Test
     @RunAsStudent
-    public void testCreateStudentExamWrongIP() throws Exception {
+    public void testCreateStudentExamWrongIP() {
         // Setup
         machine.setIpAddress("127.0.0.2");
         machine.update();
@@ -368,7 +365,7 @@ public class ExaminationControllerTest extends IntegrationTestCase {
 
     @Test
     @RunAsStudent
-    public void testCreateSeveralStudentExamsFails() throws Exception {
+    public void testCreateSeveralStudentExamsFails() {
         // Execute
         Result result = get("/app/student/exam/" + exam.getHash());
         assertThat(result.status()).isEqualTo(Helpers.OK);
@@ -383,7 +380,7 @@ public class ExaminationControllerTest extends IntegrationTestCase {
 
     @Test
     @RunAsStudent
-    public void testCreateStudentExamAlreadyStarted() throws Exception {
+    public void testCreateStudentExamAlreadyStarted() {
         // Execute
         Result result = get("/app/student/exam/" + exam.getHash());
         assertThat(result.status()).isEqualTo(Helpers.OK);
@@ -397,12 +394,12 @@ public class ExaminationControllerTest extends IntegrationTestCase {
         node = Json.parse(contentAsString(result));
         Exam anotherStudentExam = deserialize(Exam.class, node);
 
-        // Verify that the previous exam was returned, and participation & enrolment still point to it
+        // Verify that the previous exam was returned, and participation and enrolment still point to it
         assertThat(studentExam.getId()).isEqualTo(anotherStudentExam.getId());
-        assertThat(DB.find(ExamEnrolment.class, enrolment.getId()).getExam().getHash())
-            .isEqualTo(studentExam.getHash());
-        ExamParticipation participation = DB
-            .find(ExamParticipation.class)
+        assertThat(DB.find(ExamEnrolment.class, enrolment.getId()).getExam().getHash()).isEqualTo(
+            studentExam.getHash()
+        );
+        ExamParticipation participation = DB.find(ExamParticipation.class)
             .where()
             .eq("exam.id", studentExam.getId())
             .findOne();
@@ -412,15 +409,14 @@ public class ExaminationControllerTest extends IntegrationTestCase {
 
     @Test
     @RunAsStudent
-    public void testClaimChoiceQuestionOptionOrderAndAnswerSkip() throws Exception {
+    public void testClaimChoiceQuestionOptionOrderAndAnswerSkip() {
         Exam studentExam = prepareExamination();
-        ExamSectionQuestion question = DB
-            .find(ExamSectionQuestion.class)
+        ExamSectionQuestion question = DB.find(ExamSectionQuestion.class)
             .where()
             .eq("examSection.exam", studentExam)
             .eq("question.type", Question.Type.ClaimChoiceQuestion)
             .findList()
-            .get(0);
+            .getFirst();
         List<ExamSectionQuestionOption> options = new ArrayList<>(question.getOptions());
 
         // Check that option order is the same as in original question, although scores have been changed for exam options
